[gd_scene load_steps=5 format=3 uid="uid://b6o8kfy3hn4f0"]

[ext_resource type="Script" path="res://Scripts/spinning_enemy.gd" id="1_0rvs3"]
[ext_resource type="Texture2D" uid="uid://bx0nwtmuiowxe" path="res://Assets/Texture/SpiningEnemy.png" id="1_jr18o"]
[ext_resource type="Texture2D" uid="uid://y2sg3fsbrh4w" path="res://Assets/Texture/SpiningEnemyGun.png" id="3_xr1uq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3lv1g"]
radius = 13.0

[node name="SpinningEnemy" type="Area2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_0rvs3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jr18o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3lv1g")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="Rotator" type="Node2D" parent="."]

[node name="Gun1" type="Node2D" parent="Rotator"]
position = Vector2(-21, 0)
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Rotator/Gun1"]
texture = ExtResource("3_xr1uq")

[node name="ShootPos" type="Marker2D" parent="Rotator/Gun1"]
position = Vector2(3.49691e-07, -8)

[node name="Gun2" type="Node2D" parent="Rotator"]
position = Vector2(0, -21)

[node name="Sprite2D" type="Sprite2D" parent="Rotator/Gun2"]
texture = ExtResource("3_xr1uq")

[node name="ShootPos" type="Marker2D" parent="Rotator/Gun2"]
position = Vector2(3.49691e-07, -8)

[node name="Gun3" type="Node2D" parent="Rotator"]
position = Vector2(21, 0)
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="Rotator/Gun3"]
texture = ExtResource("3_xr1uq")

[node name="ShootPos" type="Marker2D" parent="Rotator/Gun3"]
position = Vector2(3.49691e-07, -8)

[node name="Gun4" type="Node2D" parent="Rotator"]
position = Vector2(0, 21)
rotation = -3.14159

[node name="Sprite2D" type="Sprite2D" parent="Rotator/Gun4"]
texture = ExtResource("3_xr1uq")

[node name="ShootPos" type="Marker2D" parent="Rotator/Gun4"]
position = Vector2(3.49691e-07, -8)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
